# Dante

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/forge/.claude-plugin/: plugin.json
.claude/forge/agents/: task-decomposer.md  test-architect.md
.claude/forge/commands/: implement.md  plan.md  review.md  test.md
.claude/forge/skills/forge-test-design/references/: goodhart-patterns.md
.claude/forge/skills/forge-workflow/references/: loop-mechanics.md  work-order-reference.md
forge/: README.md  install.sh
forge/lib/: common.sh
forge/tests/: run_all.sh  test_file_isolation.sh  test_helpers.sh  test_init.sh  test_loop_converge.sh  test_max_iter.sh  test_order_create.sh  test_status.sh  test_task_id_validation.sh  test_validate_cmd.sh
plugins/forge/.claude-plugin/: plugin.json
plugins/forge/agents/: task-decomposer.md
plugins/forge/commands/: implement.md  plan.md  review.md  test.md
plugins/forge/skills/forge-test-design/: SKILL.md
plugins/forge/skills/forge-workflow/: SKILL.md
plugins/forge/skills/forge-workflow/references/: loop-mechanics.md  work-order-reference.md
